--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,7 @@
 @layer reset, base, tokens, recipes, utilities;
 
-
-html,
 body {
-  max-width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
+  scroll-behavior: smooth;
 }
 
 .loading {
